--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                 </div>
                 
                 <div class="prose prose-lg dark:prose-invert max-w-none">
-                    <p>Welcome to D&T Co.'s comprehensive strategy reference library. This toolkit equips you with proven frameworks, methodologies, and tools to excel in business analysis and decision-making. Use these resources to analyze complex situations, develop strategic recommendations, and drive successful implementations within D&T Co./p>
+                    <p>Welcome to D&T Co.'s comprehensive strategy reference library. This toolkit equips you with proven frameworks, methodologies, and tools to excel in business analysis and decision-making. Use these resources to analyze complex situations, develop strategic recommendations, and drive successful implementations within D&T Co.>
                 </div>
                 
                 <div class="mt-6 grid grid-cols-1 md:grid-cols-3 gap-4">
