until mece prev next buttons

--- a/public/21mece.html
+++ b/public/21mece.html
@@ -1174,12 +1174,12 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-mece">
+                    <a href="/56storylining.html" button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-mece">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: MECE Framework</span>
+                        <span>Previous: Story-lining</span>
                     </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-decision-trees">
-                        <span>Next: Decision Trees</span>
+                    <a href="/57issuetrees.html" button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-decision-trees">
+                        <span>Next: Issue Trees</span>
                         <i class="ri-arrow-right-line"></i>
                     </button>
                 </div>
