--- a/public/20hypothesisdriven.html
+++ b/public/20hypothesisdriven.html
@@ -946,10 +946,12 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" id="back-to-modules">
+                    <a href="/index.html" button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" id="back-to-modules">
                         <span>Back to Modules</span>
                     </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-storylining">
+
+
+                    <a href="/56storylining.html" button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-storylining">
                         <span>Next: Story-lining</span>
                         <i class="ri-arrow-right-line"></i>
                     </button>
