--- a/public/56storylining.html
+++ b/public/56storylining.html
@@ -1248,12 +1248,12 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled>
+                    <a href="/20hypothesisdriven.html" button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled>
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous Module</span>
+                        <span> Previous: Hypothesis-driven problem-solving</span>
                     </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-issue-trees">
-                        <span>Next: Issue Trees</span>
+                    <a href="/21mece.html" button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-issue-trees">
+                        <span>Next: MECE Framework</span>
                         <i class="ri-arrow-right-line"></i>
                     </button>
                 </div>
