fixed next back button links until cost benefit analysis

--- a/public/11financialreports.html
+++ b/public/11financialreports.html
@@ -273,7 +273,7 @@
                             <h5 class="font-medium mb-2">Annual Reports (10-K)</h5>
                             <p class="text-sm mb-3">Comprehensive annual financial statements and business overview filed with the SEC.</p>
                             <ul class="pl-4 text-xs mb-3">
-                                <li>Available on <a href="https://investors.D&T Co.technologies.com/financial-information/annual-reports" target="_blank" class="text-primary hover:underline">D&T Co. Investor Relations</a></li>
+                                <li>Available on D&T Co. Investor Relations</a></li>
                                 <li>Filed annually, typically in March/April</li>
                                 <li>Includes detailed business segment information</li>
                             </ul>
@@ -284,7 +284,7 @@
                             <h5 class="font-medium mb-2">Quarterly Reports (10-Q)</h5>
                             <p class="text-sm mb-3">Quarterly financial statements with less detailed information than annual reports.</p>
                             <ul class="pl-4 text-xs mb-3">
-                                <li>Available on <a href="https://investors.D&T Co.technologies.com/financial-information/quarterly-reports" target="_blank" class="text-primary hover:underline">D&T Co. Investor Relations</a></li>
+                                <li>Available on D&T Co. Investor Relations</a></li>
                                 <li>Filed quarterly, typically within 40 days after quarter end</li>
                                 <li>Provides updates on recent performance</li>
                             </ul>
@@ -295,7 +295,7 @@
                             <h5 class="font-medium mb-2">Earnings Releases</h5>
                             <p class="text-sm mb-3">Press releases announcing quarterly financial results before the full 10-Q filing.</p>
                             <ul class="pl-4 text-xs mb-3">
-                                <li>Available on <a href="https://investors.D&T Co.technologies.com/financial-information/quarterly-results" target="_blank" class="text-primary hover:underline">D&T Co. Investor Relations</a></li>
+                                <li>Available on D&T Co. Investor Relations</a></li>
                                 <li>Released quarterly, typically before the 10-Q</li>
                                 <li>Includes management commentary on results</li>
                             </ul>
@@ -306,7 +306,7 @@
                             <h5 class="font-medium mb-2">Investor Presentations</h5>
                             <p class="text-sm mb-3">Slide decks with financial highlights and strategic information for investors.</p>
                             <ul class="pl-4 text-xs mb-3">
-                                <li>Available on <a href="https://investors.D&T Co.technologies.com/events-and-presentations" target="_blank" class="text-primary hover:underline">D&T Co. Investor Relations</a></li>
+                                <li>Available on D&T Co. Investor Relations</a></li>
                                 <li>Published for quarterly earnings calls and investor events</li>
                                 <li>Contains visualizations of key metrics and trends</li>
                             </ul>
@@ -672,14 +672,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-financial-modeling">
+                    <a href="/index.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: Financial Modeling</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-financial-ratios">
-                        <span>Next: Key Financial Ratios</span>
+                        <span>Previous: Back to Modules</span>
+                    </a>
+                    <a href="59commonsize.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Next: Common-Size Financial Statements</span> 
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
