--- a/public/12keyfinancialratios.html
+++ b/public/12keyfinancialratios.html
@@ -888,14 +888,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-D&T Co.-financials">
+                    <a href="61appliedfinancialstatements.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: D&T Co.'s Financial Reports</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-cost-benefit">
+                        <span>Previous: Applied Financial Statements</span>
+                    </a>
+                    <a href="13costbenefit.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Cost-Benefit Analysis</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
