--- a/public/60sharegainpnlmodeling.html
+++ b/public/60sharegainpnlmodeling.html
@@ -1697,14 +1697,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic" data-prev="topic-common-size-analysis">
+                    <a href="59commonsize.html" class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Common-Size Analysis</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-financial-statements">
+                    </a>
+                    <a href="61appliedfinancialstatements.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Applied Financial Statements</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
