--- a/public/61appliedfinancialstatements.html
+++ b/public/61appliedfinancialstatements.html
@@ -1907,14 +1907,14 @@
                     
                     
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic" data-prev="topic-modeling">
+                    <a href="60sharegainpnlmodeling.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: Share-Gain &amp; P&amp;L Modeling</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
-                        <span>Next Module</span>
+                        <span>Previous: Share-Gain & P&L Modeling</span>
+                    </a>
+                    <a href="12keyfinancialratios.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Next: Key Financial Ratios</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
