--- a/public/57issuetrees.html
+++ b/public/57issuetrees.html
@@ -1016,14 +1016,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic" data-prev="topic-storylining">
+                    <a href="/public/56storylining.html" class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic" data-prev="topic-storylining">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Story-lining</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-root-cause">
-                        <span>Next: Root-Cause Analysis</span>
+                    </a>
+                    <a href="/public/22decisiontrees.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-root-cause">
+                        <span>Next: Decision Trees</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
