--- a/public/58rootcauseanalysis.html
+++ b/public/58rootcauseanalysis.html
@@ -1336,14 +1336,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic" data-prev="topic-issue-trees">
+                    <a href="22decisiontrees.html" class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: Issue Trees</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
-                        <span>Next Module</span>
+                        <span>Previous: Decision Trees</span>
+                    </a>
+                    <a href="23scenarioanalysis.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Next: Scenario Analysis</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
