--- a/public/59commonsize.html
+++ b/public/59commonsize.html
@@ -1370,14 +1370,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
+                    <a href="11financialreports.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous Module</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-modeling">
-                        <span>Next: Share-Gain &amp; P&amp;L Modeling</span>
+                        <span>Previous: Financial Reports</span>
+                    </a>
+                    <a href="60sharegainpnlmodeling.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Next: Share-Gain & P&L Modeling</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
