prev and next buttons

--- a/public/14swot.html
+++ b/public/14swot.html
@@ -1191,10 +1191,10 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" id="back-to-modules-from-swot">
+                    <a href="index.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" id="back-to-modules-from-swot">
                         <span>Back to Modules</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-porters-five">
+                    </a>
+                    <a href="62portersfive.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Porter's Five Forces</span>
                         <i class="ri-arrow-right-line"></i>
                     </button>
