--- a/public/32rapids.html
+++ b/public/32rapids.html
@@ -1419,11 +1419,11 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <a class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" href="/31raci">
+                    <a href="31raci.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: RACI Framework</span>
                     </a>
-                    <a class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" href="/33processmaps">
+                    <a href="33processmaps.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Process Maps</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
