--- a/public/33processmaps.html
+++ b/public/33processmaps.html
@@ -1938,12 +1938,12 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <a class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" href="32rapids.html">
+                    <a href="32rapids.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: RAPIDs Framework</span>
+                        <span>Previous: RAPIDs</span>
                     </a>
-                    <a class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" href="34processengineering.html">
-                        <span>Next: Process Reengineering</span>
+                    <a href="34processengineering.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Next: Process Engineering</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
                 </div>
