--- a/public/41buildingcompelling.html
+++ b/public/41buildingcompelling.html
@@ -1500,14 +1500,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
+                    <a href="index.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-business-storytelling">
+                        <span>Back to Modules</span>
+                    </a>
+                    <a href="42storytellingbusiness.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Storytelling in Business</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
