--- a/public/47transitions.html
+++ b/public/47transitions.html
@@ -1720,14 +1720,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-lifecycle">
+                    <a href="46lifecyclemanagement.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Lifecycle Management</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-marketing">
+                    </a>
+                    <a href="48marketing.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Marketing</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
