--- a/public/50inventorymanagement.html
+++ b/public/50inventorymanagement.html
@@ -1829,14 +1829,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-pricing">
+                    <a href="49pricing.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Pricing</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-demand-shaping">
+                    </a>
+                    <a href="51demandshaping.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Demand Shaping</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
