--- a/public/88ansoff.html
+++ b/public/88ansoff.html
@@ -939,14 +939,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic" data-prev="topic-swot-analysis">
+                    <a href="19okrs.html" class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: SWOT Analysis</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-bcg-matrix">
-                        <span>Next: BCG Matrix</span>
+                        <span>Previous: OKRs</span>
+                    </a>
+                    <a href="184ps.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Next: 4Ps GTM Strategy</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
