--- a/public/17bcgmatrix.html
+++ b/public/17bcgmatrix.html
@@ -1465,14 +1465,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-pestel">
+                    <a href="64valuechain.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: PESTEL Analysis</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-okrs">
+                        <span>Previous: Value Chain Analysis</span>
+                    </a>
+                    <a href="19okrs.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: OKRs</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
