--- a/public/31raci.html
+++ b/public/31raci.html
@@ -1304,11 +1304,11 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-4ps-gtm">
+                    <a href="index.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: 4Ps GTM Strategy</span>
-                    </button>
-                    <a class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" href="/32rapids">
+                        <span>Back to Modules</span>
+                    </a>
+                    <a href="32rapids.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: RAPIDs Framework</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
