--- a/public/34processengineering.html
+++ b/public/34processengineering.html
@@ -1631,11 +1631,11 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <a class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" href="/33processmaps">
+                    <a href="33processmaps.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Process Maps</span>
                     </a>
-                    <a class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" href="/35kotter">
+                    <a href="35kotter.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Kotter's Change Management</span>
                         <i class="ri-arrow-right-line"></i>
                     </a>
