--- a/public/35kotter.html
+++ b/public/35kotter.html
@@ -1779,14 +1779,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <a class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" href="/34processengineering">
+                    <a href="34processengineering.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: Process Reengineering</span>
+                        <span>Previous: Process Engineering</span>
                     </a>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-module-summary">
-                        <span>Next: Module Summary</span>
+                    <a href="index.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Back to Modules</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
