--- a/public/39stakeholder.html
+++ b/public/39stakeholder.html
@@ -1595,14 +1595,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-workplan-development">
+                    <a href="38workplan.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Workplan Development</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-project-tools">
+                    </a>
+                    <a href="40toolsganttsraci.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Tools: Gantts, RACI, Agile</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
