--- a/public/40toolsganttsraci.html
+++ b/public/40toolsganttsraci.html
@@ -1769,14 +1769,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-stakeholder-engagement">
+                    <a href="39stakeholder.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Stakeholder Engagement &amp; Influence</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
-                        <span>Next</span>
+                    </a>
+                    <a href="index.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Back to Modules</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
