--- a/public/42storytellingbusiness.html
+++ b/public/42storytellingbusiness.html
@@ -1489,14 +1489,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-executive-summaries">
+                    <a href="41buildingcompelling.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous: Executive Summaries &amp; Presentations</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-feedback-managing-up">
+                        <span>Previous: Building Compelling Presentations</span>
+                    </a>
+                    <a href="43deliveringfeedback.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Delivering Feedback &amp; Managing Up</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
