--- a/public/48marketing.html
+++ b/public/48marketing.html
@@ -2080,14 +2080,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-transitions">
+                    <a href="47transitions.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Transitions</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-pricing">
+                    </a>
+                    <a href="49pricing.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Pricing</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
