--- a/public/52ethics.html
+++ b/public/52ethics.html
@@ -1706,14 +1706,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic" data-prev="topic-demand-shaping">
+                    <a href="51demandshaping.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Demand Shaping</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-supply-chain">
-                        <span>Back to Beginning</span>
+                    </a>
+                    <a href="index.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Back to Modules</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
