--- a/public/62portersfive.html
+++ b/public/62portersfive.html
@@ -1820,14 +1820,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
+                    <a href="14swot.html" class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
                         <i class="ri-arrow-left-line"></i>
-                        <span>Previous Module</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic" data-next="topic-value-chain">
+                        <span>Previous: SWOT Analysis</span>
+                    </a>
+                    <a href="64valuechain.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
                         <span>Next: Value-Chain Analysis</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
