--- a/public/64valuechain.html
+++ b/public/64valuechain.html
@@ -1748,7 +1748,6 @@
                             </div>
                         </a>
                         
-                        <a href="" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                         <a href="https://www.investopedia.com/terms/v/valuechain.asp" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-purple-100 dark:bg-purple-900/30 flex items-center justify-center text-purple-600 dark:text-purple-400 flex-shrink-0">
@@ -1764,14 +1763,14 @@
                 </div>
                 
                 <div class="flex justify-between mt-6">
-                    <button class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic" data-prev="topic-porters-five-forces">
+                    <a href="62portersfive.html" class="flex items-center gap-1 text-primary hover:text-primary/80 prev-topic">
                         <i class="ri-arrow-left-line"></i>
                         <span>Previous: Porter's Five Forces</span>
-                    </button>
-                    <button class="flex items-center gap-1 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200" disabled="">
-                        <span>Next Module</span>
+                    </a>
+                    <a href="17bcgmatrix.html" class="flex items-center gap-1 text-primary hover:text-primary/80 next-topic">
+                        <span>Next: BCG Matrix; GE-McKinsey Matrix</span>
                         <i class="ri-arrow-right-line"></i>
-                    </button>
+                    </a>
                 </div>
             </section>
         </main>
